Fix chat margin not being wrapped in calc after changes. Improve styling of image embed link title.

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -30464,7 +30464,7 @@ div:not(.ActiveVoiceChannel) > .chatRoomVoiceChannelNameContainer:active {
   position: absolute;
   inset: 0;
   background: var(--zehn-color-app);
-  margin-top: var(--chat-margin);
+  margin-top: calc(var(--chat-margin));
 }
 
 .MultiUserChat .ChatRoomGroup_MainAndChatEntry,
@@ -30666,17 +30666,17 @@ div:not(.ActiveVoiceChannel) > .chatRoomVoiceChannelNameContainer:active {
 .ChatRoomGroup_Main_Content .chatHistory,
 .ChatRoomGroup_Main_Content.Horizontal .chatHistory,
 .ChatRoomGroup_Main_Content.Vertical .chatHistory {
-  margin-top: var(--chat-margin) !important;
+  margin-top: calc(var(--chat-margin)) !important;
 }
 
 .MultiUserChat.namedGroup .ChatRoomGroup_Main_Content .chatHistory,
 .MultiUserChat.namedGroup .ChatRoomGroup_Main_Content.Horizontal .chatHistory,
 .MultiUserChat.namedGroup .ChatRoomGroup_Main_Content.Vertical .chatHistory {
-  margin-top: var(--chat-margin) !important;
+  margin-top: calc(var(--chat-margin)) !important;
 }
 
 .MultiUserChat.namedGroup.broadcastVisible .ChatRoomGroup_Main_Content.Horizontal .chatHistory {
-  margin-top: var(--chat-margin) !important;
+  margin-top: calc(var(--chat-margin)) !important;
 }
 
 .MultiUserChat.namedGroup.broadcastVisible .ChatRoomGroup_Main_Content.Vertical .chatHistory {
@@ -30684,7 +30684,7 @@ div:not(.ActiveVoiceChannel) > .chatRoomVoiceChannelNameContainer:active {
 }
 
 .ChatRoomGroup_Main_Content.Horizontal .ChatMessages {
-  margin-top: var(--chat-margin) !important;
+  margin-top: calc(var(--chat-margin)) !important;
 }
 
 .BothChatsDisplayed .ChatRoomGroup_Main_Content.Horizontal .ChatMessages,
@@ -60284,9 +60284,21 @@ a.chatImageURL,
   position: relative !important;
   line-height: var(--zehn-size-24) !important;
   height: var(--zehn-size-24) !important;
+  opacity: 1 !important;
   margin-top: var(--zehn-size-spacing-xs) !important;
   max-width: 100% !important;
-  opacity: 1 !important;
+  width: 100% !important;
+  padding: var(--zehn-size-panel-inset-padding) !important;
+  background: var(--zehn-color-panel-inset) !important;
+  border-radius: var(--zehn-size-panel-inset-radius) !important;
+}
+a.chatImageURL *,
+.msg .chatVideoContainer a.chatImageURL *,
+.msg .chatImageContainer a.chatImageURL *,
+.msg .chatImageContainer.giphyImg a.chatImageURL * {
+  color: var(--zehn-color-text-label) !important;
+  font-weight: var(--zehn-weight-normal) !important;
+  font-size: var(--zehn-size-text-label) !important;
 }
 
 .giphyImg .chatImageURL {
@@ -60298,14 +60310,15 @@ a.chatImageURL,
 .giphyImg a.chatImageURL .giphyTag {
   margin: 0 !important;
   padding: 0 !important;
-  font-size: var(--zehn-size-12) !important;
-  color: inherit !important;
+  color: var(--zehn-color-text-label) !important;
   font-weight: var(--zehn-weight-normal) !important;
+  font-size: var(--zehn-size-text-label) !important;
 }
 
 .giphyImg a.chatImageURL .giphyTag .giphySearch {
-  color: inherit !important;
+  color: var(--zehn-color-text-label) !important;
   font-weight: var(--zehn-weight-normal) !important;
+  font-size: var(--zehn-size-text-label) !important;
 }
 
 .msg .BBCodeResizableComponent:not(.Minimized, .Minimizing) a.chatImageURL {
@@ -60546,6 +60559,8 @@ a.chatImageURL,
   border-width: var(--zehn-size-chat-embed-border);
   border-style: solid !important;
   border-color: var(--zehn-color-embed-border) !important;
+  min-width: var(--zehn-size-chat-embed) !important;
+  box-sizing: border-box !important;
 }
 
 .BBCodeAlreadyCollapsed:hover {
